--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"icons":[{"src":"/assets/img/192.jpg","type":"image/jpeg","sizes":"192x192"},{"src":"/assets/img/512.jpg","type":"image/jpeg","sizes":"512x512"}],"background_color":"#c53364","theme_color":"#e1e1e1","display":"fullscreen"}
+{"short_name":"Karan Khandekar","name":"Karan Khandekar","icons":[{"src":"/assets/img/192.jpg","type":"image/jpeg","sizes":"192x192"},{"src":"/assets/img/512.jpg","type":"image/jpeg","sizes":"512x512"}],"start_url":"/index.html","background_color":"rgb(77,105,126)","theme_color":"rgb(77,105,126)","display":"fullscreen"}
